--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,6 +33,7 @@ text-align:center; font-size:10px; line-height:normal; font-family:PT Sans;
 }
 .msgSIR {
 margin-left:10px; width:480px; height:auto; border-left:1px dotted; border-right:1px dotted; border-color: #D3D3D3;
+background: linear-gradient(90deg,rgba(247, 247, 247, 1) 0%, rgba(247, 247, 247, 1) 50%, rgba(255, 255, 255, 1) 100%);
 }
 .tleSIR {
 float:right; width:auto; max-width:305px; height:auto; padding-top:2px; padding-left:10px; padding-right:5px;
